--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </header> -->
     <main>
       <!--Герой-->
-      <!-- <section class="hero">
+      <section class="hero">
         <div class="container hero-container">
           <h1 class="hero-title">Эффективные решения <br />для вашего бизнеса</h1>
           <button type="button" class="btn-hero" data-modal-open>Заказать услугу</button>
@@ -117,7 +117,7 @@
             </div>
           </div>
         </div>
-      </section> -->
+      </section>
       <!--Наши преимущества-->
       <section class="benefits"> -->
         <div class="container">
@@ -210,7 +210,7 @@
         </div>
       </section>
       <!--Наша команда-->
-      <!-- <section class="section team">
+      <section class="section team">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
           <ul class="section-list">
@@ -364,9 +364,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- Постоянные клиенты -->
-      <!-- <section class="client">
+      <section class="client">
         <div class="container">
           <h2 class="client__title">Постоянные клиенты</h2>
           <ul class="client__list">
@@ -415,10 +415,10 @@
           </ul>
 
         </div>
-      </section> -->
+      </section>
     </main>
 
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container footer-box">
         <div class="footer-container">
           <a href="/" class="logo"><span class="text-logo">Web</span>Studio</a>
@@ -478,7 +478,7 @@
         </form>
       </div>
       
-    </footer> -->
+    </footer>
 
     <script src="./js/modal.js"></script>
   </body>
