додаю мобільне меню

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="./css/main.min.css">
   </head>
   <body>
-    <!-- <header class="header">
+    <header class="header">
       <div class="container header-container">
         <nav class="site-nav">
           <a href="/" class="logo"><span class="text-logo">Web</span>Studio</a>
@@ -58,7 +58,7 @@
             </li>
         </ul>
       </div>
-    </header> -->
+    </header>
     <main>
       <!--Герой-->
       <section class="hero">
@@ -479,6 +479,43 @@
       </div>
       
     </footer>
+
+    <!-- Mobile menu -->
+    <div class="mobile-menu">
+      <ul class="mobile-menu__nav">
+        <li class="mobile-menu__item">
+          <a href="" class="mobile-menu__link">Студия </a>
+        </li>
+        <li class="mobile-menu__item">
+          <a href="" class="mobile-menu__link">Портфолио</a>
+        </li>
+        <li class="mobile-menu__item">
+          <a href="" class="mobile-menu__link">Контакты</a>
+        </li>
+      </ul>
+      <ul class="mobile-menu__contatcts">
+        <li class="mobile-menu__item">
+          <a href="tel:+380961111111" class="mobile-menu__link">+38 096 111 11 11</a>
+        </li>
+        <li class="mobile-menu__item">
+          <a href="mailto:info@devstudio.com" class="mobile-menu__link">info@devstudio.com</a>
+        </li>
+      </ul>
+      <ul class="mobile-menu__socials">
+        <li class="mobile-menu__item">
+          <a href="" class="mobile-menu__link">Instagram </a>
+        </li>
+        <li class="mobile-menu__item">
+          <a href="" class="mobile-menu__link">Twitter</a>
+        </li>
+        <li class="mobile-menu__item">
+          <a href="" class="mobile-menu__link">Facebook</a>
+        </li>
+        <li class="mobile-menu__item">
+          <a href="" class="mobile-menu__link">LinkedIn</a>
+        </li>
+      </ul>
+    </div>
 
     <script src="./js/modal.js"></script>
   </body>
