--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
     </footer>
 
     <!-- Mobile menu -->
-    <div class="mobile-menu">
+    <!-- <div class="mobile-menu">
       <ul class="mobile-menu__nav">
         <li class="mobile-menu__item">
           <a href="" class="mobile-menu__link">Студия </a>
@@ -515,7 +515,7 @@
           <a href="" class="mobile-menu__link">LinkedIn</a>
         </li>
       </ul>
-    </div>
+    </div> -->
 
     <script src="./js/modal.js"></script>
   </body>
