робота з мобільним меню

--- a/index.html
+++ b/index.html
@@ -37,6 +37,49 @@
                 <a href="" class="link">Контакты</a>
             </li>
           </ul>
+          <button type="button" class="mobile-menu-btn is-open" data-menu-button>
+            <svg width="40" height="40" aria-label="Переключатель мобильного меню">
+              <use class="icon-cross" href="./imeges/icon/sprite.svg#icon-close-mobile-menu"></use>
+              <use class="icon-menu" href="./imeges/icon/sprite.svg#icon-mobile-menu"></use>
+            </svg>
+          </button>
+
+          <!-- Mobile menu -->
+          <div class="mobile-menu">
+                <ul class="mobile-menu__nav">
+                  <li class="mobile-menu__item">
+                    <a href="" class="mobile-menu__link">Студия </a>
+                  </li>
+                  <li class="mobile-menu__item">
+                    <a href="" class="mobile-menu__link">Портфолио</a>
+                  </li>
+                  <li class="mobile-menu__item">
+                    <a href="" class="mobile-menu__link">Контакты</a>
+                  </li>
+                </ul>
+                <ul class="mobile-menu__contatcts">
+                  <li class="mobile-menu__item">
+                    <a href="tel:+380961111111" class="contatcts__link telefon">+38 096 111 11 11</a>
+                  </li>
+                  <li class="mobile-menu__item">
+                    <a href="mailto:info@devstudio.com" class="contatcts__link e-mail">info@devstudio.com</a>
+                  </li>
+                </ul>
+                <ul class="mobile-menu__socials socials">
+                  <li class="socials__item">
+                    <a href="" class="socials__link">Instagram </a>
+                  </li>
+                  <li class="socials__item">
+                    <a href="" class="socials__link">Twitter</a>
+                  </li>
+                  <li class="socials__item">
+                    <a href="" class="socials__link">Facebook</a>
+                  </li>
+                  <li class="socials__item">
+                    <a href="" class="socials__link">LinkedIn</a>
+                  </li>
+                </ul>
+              </div>
         </nav>
 
         <ul class="contact">
@@ -480,43 +523,9 @@
       
     </footer>
 
-    <!-- Mobile menu -->
-    <!-- <div class="mobile-menu">
-      <ul class="mobile-menu__nav">
-        <li class="mobile-menu__item">
-          <a href="" class="mobile-menu__link">Студия </a>
-        </li>
-        <li class="mobile-menu__item">
-          <a href="" class="mobile-menu__link">Портфолио</a>
-        </li>
-        <li class="mobile-menu__item">
-          <a href="" class="mobile-menu__link">Контакты</a>
-        </li>
-      </ul>
-      <ul class="mobile-menu__contatcts">
-        <li class="mobile-menu__item">
-          <a href="tel:+380961111111" class="mobile-menu__link">+38 096 111 11 11</a>
-        </li>
-        <li class="mobile-menu__item">
-          <a href="mailto:info@devstudio.com" class="mobile-menu__link">info@devstudio.com</a>
-        </li>
-      </ul>
-      <ul class="mobile-menu__socials">
-        <li class="mobile-menu__item">
-          <a href="" class="mobile-menu__link">Instagram </a>
-        </li>
-        <li class="mobile-menu__item">
-          <a href="" class="mobile-menu__link">Twitter</a>
-        </li>
-        <li class="mobile-menu__item">
-          <a href="" class="mobile-menu__link">Facebook</a>
-        </li>
-        <li class="mobile-menu__item">
-          <a href="" class="mobile-menu__link">LinkedIn</a>
-        </li>
-      </ul>
-    </div> -->
+    
 
     <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
