закінчив ретінізацію і адаптацію іміджів

--- a/portfolio.html
+++ b/portfolio.html
@@ -118,7 +118,22 @@
             <li class="flex-item">
               <a href="" class="portfolio-link">
                 <div class="product">
-                  <img src="./imeges/portfolio/port1.jpg" alt="ноутбук с открытым сайтом" width="370" height="294" />
+                  <img 
+                    srcset="./imeges/w-portfolio/port-1_370.jpg 370w, 
+                      ./imeges/w-portfolio/port-1_354.jpg 354w, 
+                      ./imeges/w-portfolio/port-1_450.jpg 450w, 
+                      ./imeges/w-portfolio/port-1_740.jpg 740w, 
+                      ./imeges/w-portfolio/port-1_708.jpg 708w, 
+                      ./imeges/w-portfolio/port-1_900.jpg 900w,"
+                    sizes="(min-width: 1200px) 370px, 
+                      (min-width: 768px) 354px, 
+                      (max-width: 767px) 450px, 100vw"
+                    src="./imeges/w-portfolio/port-1_450.jpg" 
+                    alt="ноутбук с открытым сайтом" 
+                    width="370" 
+                    height="294" 
+                    loading="lazy"
+                  />
                   <div class="overlay">
                     <p class="overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
                       позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
@@ -135,7 +150,22 @@
             <li class="flex-item">
               <a href="" class="portfolio-link">
                 <div class="product">
-                  <img src="./imeges/portfolio/port2.jpg" alt="люди играют в баскетбол" width="370" height="294" />
+                  <img 
+                    srcset="./imeges/w-portfolio/port-2_370.jpg 370w, 
+                      ./imeges/w-portfolio/port-2_354.jpg 354w, 
+                      ./imeges/w-portfolio/port-2_450.jpg 450w, 
+                      ./imeges/w-portfolio/port-2_740.jpg 740w, 
+                      ./imeges/w-portfolio/port-2_708.jpg 708w, 
+                      ./imeges/w-portfolio/port-2_900.jpg 900w,"
+                    sizes="(min-width: 1200px) 370px, 
+                      (min-width: 768px) 354px, 
+                      (max-width: 767px) 450px, 100vw"
+                    src="./imeges/w-portfolio/port-2_450.jpg" 
+                    alt="люди играют в баскетбол" 
+                    width="370" 
+                    height="294"
+                    loading="lazy" 
+                  />
                   <div class="overlay">
                     <p class="overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
                       позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
@@ -152,7 +182,22 @@
             <li class="flex-item">
               <a href="" class="portfolio-link">
                 <div class="product">
-                  <img src="./imeges/portfolio/port3.jpg" alt="логотим рыбного ресторана" width="370" height="294" />
+                  <img 
+                    srcset="./imeges/w-portfolio/port-3_370.jpg 370w, 
+                      ./imeges/w-portfolio/port-3_354.jpg 354w, 
+                      ./imeges/w-portfolio/port-3_450.jpg 450w, 
+                      ./imeges/w-portfolio/port-3_740.jpg 740w, 
+                      ./imeges/w-portfolio/port-3_708.jpg 708w, 
+                      ./imeges/w-portfolio/port-3_900.jpg 900w,"
+                    sizes="(min-width: 1200px) 370px, 
+                      (min-width: 768px) 354px, 
+                      (max-width: 767px) 450px, 100vw"
+                    src="./imeges/w-portfolio/port-3_450.jpg" 
+                    alt="логотим рыбного ресторана" 
+                    width="370" 
+                    height="294" 
+                    loading="lazy"
+                  />
                   <div class="overlay">
                     <p class="overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
                       позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
@@ -169,7 +214,22 @@
             <li class="flex-item">
               <a href="" class="portfolio-link">
                 <div class="product">
-                  <img src="./imeges/portfolio/port4.jpg" alt="наушники" width="370" height="294" />
+                  <img 
+                    srcset="./imeges/w-portfolio/port-4_370.jpg 370w, 
+                      ./imeges/w-portfolio/port-4_354.jpg 354w, 
+                      ./imeges/w-portfolio/port-4_450.jpg 450w, 
+                      ./imeges/w-portfolio/port-4_740.jpg 740w, 
+                      ./imeges/w-portfolio/port-4_708.jpg 708w, 
+                      ./imeges/w-portfolio/port-4_900.jpg 900w,"
+                    sizes="(min-width: 1200px) 370px, 
+                      (min-width: 768px) 354px, 
+                      (max-width: 767px) 450px, 100vw"
+                    src="./imeges/w-portfolio/port-4_450.jpg" 
+                    alt="наушники" 
+                    width="370" 
+                    height="294" 
+                    loading="lazy"
+                  />
                   <div class="overlay">
                     <p class="overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
                       позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
@@ -186,7 +246,22 @@
             <li class="flex-item">
               <a href="" class="portfolio-link">
                 <div class="product">
-                  <img src="./imeges/portfolio/port5.jpg" alt="коробки" width="370" height="294" />
+                  <img 
+                    srcset="./imeges/w-portfolio/port-5_370.jpg 370w, 
+                      ./imeges/w-portfolio/port-5_354.jpg 354w, 
+                      ./imeges/w-portfolio/port-5_450.jpg 450w, 
+                      ./imeges/w-portfolio/port-5_740.jpg 740w, 
+                      ./imeges/w-portfolio/port-5_708.jpg 708w, 
+                      ./imeges/w-portfolio/port-5_900.jpg 900w,"
+                    sizes="(min-width: 1200px) 370px, 
+                      (min-width: 768px) 354px, 
+                      (max-width: 767px) 450px, 100vw"
+                    src="./imeges/w-portfolio/port-5_450.jpg" 
+                    alt="коробки" 
+                    width="370" 
+                    height="294" 
+                    loading="lazy"
+                  />
                   <div class="overlay">
                     <p class="overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
                       позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
@@ -203,7 +278,22 @@
             <li class="flex-item">
               <a href="" class="portfolio-link">
                 <div class="product">
-                  <img src="./imeges/portfolio/port6.jpg" alt="монитор" width="370" height="294" />
+                  <img 
+                    srcset="./imeges/w-portfolio/port-6_370.jpg 370w, 
+                      ./imeges/w-portfolio/port-6_354.jpg 354w, 
+                      ./imeges/w-portfolio/port-6_450.jpg 450w, 
+                      ./imeges/w-portfolio/port-6_740.jpg 740w, 
+                      ./imeges/w-portfolio/port-6_708.jpg 708w, 
+                      ./imeges/w-portfolio/port-6_900.jpg 900w,"
+                    sizes="(min-width: 1200px) 370px, 
+                      (min-width: 768px) 354px, 
+                      (max-width: 767px) 450px, 100vw"
+                    src="./imeges/w-portfolio/port-6_450.jpg" 
+                    alt="монитор" 
+                    width="370" 
+                    height="294" 
+                    loading="lazy"
+                  />
                   <div class="overlay">
                     <p class="overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
                       позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
@@ -220,7 +310,22 @@
             <li class="flex-item">
               <a href="" class="portfolio-link">
                 <div class="product">
-                  <img src="./imeges/portfolio/port7.jpg" alt="открытая книга" width="370" height="294" />
+                  <img 
+                    srcset="./imeges/w-portfolio/port-7_370.jpg 370w, 
+                      ./imeges/w-portfolio/port-7_354.jpg 354w, 
+                      ./imeges/w-portfolio/port-7_450.jpg 450w, 
+                      ./imeges/w-portfolio/port-7_740.jpg 740w, 
+                      ./imeges/w-portfolio/port-7_708.jpg 708w, 
+                      ./imeges/w-portfolio/port-7_900.jpg 900w,"
+                    sizes="(min-width: 1200px) 370px, 
+                      (min-width: 768px) 354px, 
+                      (max-width: 767px) 450px, 100vw"
+                    src="./imeges/w-portfolio/port-7_450.jpg" 
+                    alt="открытая книга" 
+                    width="370" 
+                    height="294" 
+                    loading="lazy"
+                  />
                   <div class="overlay">
                     <p class="overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
                       позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
@@ -237,7 +342,22 @@
             <li class="flex-item">
               <a href="" class="portfolio-link">
                 <div class="product">
-                  <img src="./imeges/portfolio/port8.jpg" alt="стикер" width="370" height="294" />
+                  <img 
+                    srcset="./imeges/w-portfolio/port-8_370.jpg 370w, 
+                      ./imeges/w-portfolio/port-8_354.jpg 354w, 
+                      ./imeges/w-portfolio/port-8_450.jpg 450w, 
+                      ./imeges/w-portfolio/port-8_740.jpg 740w, 
+                      ./imeges/w-portfolio/port-8_708.jpg 708w, 
+                      ./imeges/w-portfolio/port-8_900.jpg 900w,"
+                    sizes="(min-width: 1200px) 370px, 
+                      (min-width: 768px) 354px, 
+                      (max-width: 767px) 450px, 100vw"
+                    src="./imeges/w-portfolio/port-8_450.jpg" 
+                    alt="стикер" 
+                    width="370" 
+                    height="294" 
+                    loading="lazy"
+                  />
                   <div class="overlay">
                     <p class="overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
                       позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
@@ -254,7 +374,22 @@
             <li class="flex-item">
               <a href="" class="portfolio-link">
                 <div class="product">
-                  <img src="./imeges/portfolio/port9.jpg" alt="человек работает за компьютером" width="370" height="294" />
+                  <img 
+                    srcset="./imeges/w-portfolio/port-9_370.jpg 370w, 
+                      ./imeges/w-portfolio/port-9_354.jpg 354w, 
+                      ./imeges/w-portfolio/port-9_450.jpg 450w, 
+                      ./imeges/w-portfolio/port-9_740.jpg 740w, 
+                      ./imeges/w-portfolio/port-9_708.jpg 708w, 
+                      ./imeges/w-portfolio/port-9_900.jpg 900w,"
+                    sizes="(min-width: 1200px) 370px, 
+                      (min-width: 768px) 354px, 
+                      (max-width: 767px) 450px, 100vw"
+                    src="./imeges/w-portfolio/port-9_450.jpg" 
+                    alt="человек работает за компьютером" 
+                    width="370" 
+                    height="294" 
+                    loading="lazy"
+                  />
                 <div class="overlay">
                   <p class="overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
                     позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
