--- a/index.html
+++ b/index.html
@@ -218,33 +218,47 @@
           <h2 class="work__title">Чем мы занимаемся</h2>
           <ul class="work__list">
             <li class="work__item">
-              <img
+              <img 
+                srcset="./imeges/w-work/work-1_370.jpg 370w, 
+                  ./imeges/w-work/work-1_740.jpg 740w"
+                sizes="(min-width: 1200px) 370px"
+                src="./imeges/w-work/work-1_370.jpg"
                 src="./imeges/чем-мы-занимаемся/box-1.jpg"
                 alt="разработка сайтов"
                 width="370"
                 height="294"
+                loading="lazy"
               />
               <div class="work__baner">
                 <h3 class="work__name">Десктопные приложения</h3>
               </div>
             </li>
             <li class="work__item">
-              <img
-                src="./imeges/чем-мы-занимаемся/box-2.jpg"
+              <img 
+                srcset="./imeges/w-work/work-2_370.jpg 370w, 
+                  ./imeges/w-work/work-2_740.jpg 740w"
+                sizes="(min-width: 1200px) 370px"
+                src="./imeges/w-work/work-2_370.jpg"
                 alt="разработка сайтов под телефон"
                 width="370"
                 height="294"
+                loading="lazy"
               />
               <div class="work__baner">
                 <h3 class="work__name">Мобильные приложения</h3>
               </div>
             </li>
             <li class="work__item">
-              <img
+              <img 
+                srcset="./imeges/w-work/work-3_370.jpg 370w, 
+                  ./imeges/w-work/work-3_740.jpg 740w"
+                sizes="(min-width: 1200px) 370px"
+                src="./imeges/w-work/work-3_370.jpg"
                 src="./imeges/чем-мы-занимаемся/box-3.jpg"
                 alt="дизайн"
                 width="370"
                 height="294"
+                loading="lazy"
               />
               <div class="work__baner">
                 <h3 class="work__name">Дизайнерские решения</h3>
@@ -259,7 +273,22 @@
           <h2 class="section-title">Наша команда</h2>
           <ul class="section-list">
             <li class="team-item">
-              <img class="photo" src="./imeges/Наша-команда/ком1.jpg" alt="" width="270" height="260" />
+              <img class="photo" 
+                srcset="./imeges/w-team/team-1_270.jpg 270w, 
+                  ./imeges/w-team/team-1_354.jpg 354w, 
+                  ./imeges/w-team/team-1_450.jpg 450w, 
+                  ./imeges/w-team/team-1_540.jpg 540w, 
+                  ./imeges/w-team/team-1_708.jpg 708w, 
+                  ./imeges/w-team/team-1_900.jpg 900w,"
+                sizes="(min-width: 1200px) 270px, 
+                  (min-width: 768px) 354px, 
+                  (max-width: 767px) 450px, 100vw"
+                src="./imeges/w-team/team-1_450.jpg" 
+                alt="Product Designer" 
+                width="270" 
+                height="260" 
+                loading="lazy"
+              />
               <div class="team-box">
                 <h3 class="name">Игорь Демьяненко</h3>
                 <p lang="en" class="position">Product Designer</p>
@@ -296,7 +325,22 @@
               </div>
             </li>
             <li class="team-item">
-              <img class="photo" src="./imeges/Наша-команда/ком2.jpg" alt="" width="270" height="260" />
+              <img class="photo"
+                srcset="./imeges/w-team/team-2_270.jpg 270w, 
+                  ./imeges/w-team/team-2_354.jpg 354w, 
+                  ./imeges/w-team/team-2_450.jpg 450w, 
+                  ./imeges/w-team/team-2_540.jpg 540w, 
+                  ./imeges/w-team/team-2_708.jpg 708w, 
+                  ./imeges/w-team/team-2_900.jpg 900w,"
+                sizes="(min-width: 1200px) 270px, 
+                 (min-width: 768px) 354px, 
+                 (max-width: 767px) 450px, 100vw"
+                src="./imeges/w-team/team-2_450.jpg" 
+                alt="Frontend Developer" 
+                width="270" 
+                height="260" 
+                loading="lazy"
+              />
               <div class="team-box">
                 <h3 class="name">Ольга Репина</h3>
                 <p lang="en" class="position">Frontend Developer</p>
@@ -333,7 +377,22 @@
               </div>
             </li>
             <li class="team-item">
-              <img class="photo" src="./imeges/Наша-команда/ком3.jpg" alt="" width="270" height="260" />
+              <img class="photo" 
+                srcset="./imeges/w-team/team-3_270.jpg 270w, 
+                  ./imeges/w-team/team-3_354.jpg 354w, 
+                  ./imeges/w-team/team-3_450.jpg 450w, 
+                  ./imeges/w-team/team-3_540.jpg 540w, 
+                  ./imeges/w-team/team-3_708.jpg 708w, 
+                  ./imeges/w-team/team-3_900.jpg 900w,"
+                sizes="(min-width: 1200px) 270px, 
+                  (min-width: 768px) 354px, 
+                  (max-width: 767px) 450px, 100vw"
+                src="./imeges/w-team/team-3_450.jpg" 
+                alt="Marketing" 
+                width="270" 
+                height="260" 
+                loading="lazy"
+              />
               <div class="team-box">
                 <h3 class="name">Николай Тарасов</h3>
                 <p lang="en" class="position">Marketing</p>
@@ -370,7 +429,22 @@
               </div>
             </li>
             <li class="team-item">
-              <img class="photo" src="./imeges/Наша-команда/ком4.jpg" alt="" width="270" height="260" />
+              <img class="photo" 
+                srcset="./imeges/w-team/team-4_270.jpg 270w, 
+                    ./imeges/w-team/team-4_354.jpg 354w, 
+                    ./imeges/w-team/team-4_450.jpg 450w, 
+                    ./imeges/w-team/team-4_540.jpg 540w, 
+                    ./imeges/w-team/team-4_708.jpg 708w, 
+                    ./imeges/w-team/team-4_900.jpg 900w,"
+                sizes="(min-width: 1200px) 270px, 
+                  (min-width: 768px) 354px, 
+                  (max-width: 767px) 450px, 100vw"
+                src="./imeges/w-team/team-4_450.jpg" 
+                alt="UI Designer" 
+                width="270" 
+                height="260"
+                loading="lazy"
+              />
               <div class="team-box">
                 <h3 class="name">Михаил Ермаков</h3>
                 <p lang="en" class="position">UI Designer</p>
