виправив зауваженяя ментора

--- a/index.html
+++ b/index.html
@@ -228,7 +228,6 @@
                   ./imeges/w-work/work-1_740.jpg 740w"
                 sizes="(min-width: 1200px) 370px"
                 src="./imeges/w-work/work-1_370.jpg"
-                src="./imeges/чем-мы-занимаемся/box-1.jpg"
                 alt="разработка сайтов"
                 width="370"
                 height="294"
@@ -259,7 +258,6 @@
                   ./imeges/w-work/work-3_740.jpg 740w"
                 sizes="(min-width: 1200px) 370px"
                 src="./imeges/w-work/work-3_370.jpg"
-                src="./imeges/чем-мы-занимаемся/box-3.jpg"
                 alt="дизайн"
                 width="370"
                 height="294"
@@ -284,15 +282,15 @@
                   ./imeges/w-team/team-1_450.jpg 450w, 
                   ./imeges/w-team/team-1_540.jpg 540w, 
                   ./imeges/w-team/team-1_708.jpg 708w, 
-                  ./imeges/w-team/team-1_900.jpg 900w,"
+                  ./imeges/w-team/team-1_900.jpg 900w" 
                 sizes="(min-width: 1200px) 270px, 
                   (min-width: 768px) 354px, 
-                  (max-width: 767px) 450px, 100vw"
+                  (max-width: 767px) 450px, 100vw" 
                 src="./imeges/w-team/team-1_450.jpg" 
                 alt="Product Designer" 
                 width="270" 
                 height="260" 
-                loading="lazy"
+                loading="lazy" 
               />
               <div class="team-box">
                 <h3 class="name">Игорь Демьяненко</h3>
@@ -336,7 +334,7 @@
                   ./imeges/w-team/team-2_450.jpg 450w, 
                   ./imeges/w-team/team-2_540.jpg 540w, 
                   ./imeges/w-team/team-2_708.jpg 708w, 
-                  ./imeges/w-team/team-2_900.jpg 900w,"
+                  ./imeges/w-team/team-2_900.jpg 900w"
                 sizes="(min-width: 1200px) 270px, 
                  (min-width: 768px) 354px, 
                  (max-width: 767px) 450px, 100vw"
@@ -388,7 +386,7 @@
                   ./imeges/w-team/team-3_450.jpg 450w, 
                   ./imeges/w-team/team-3_540.jpg 540w, 
                   ./imeges/w-team/team-3_708.jpg 708w, 
-                  ./imeges/w-team/team-3_900.jpg 900w,"
+                  ./imeges/w-team/team-3_900.jpg 900w"
                 sizes="(min-width: 1200px) 270px, 
                   (min-width: 768px) 354px, 
                   (max-width: 767px) 450px, 100vw"
@@ -440,7 +438,7 @@
                     ./imeges/w-team/team-4_450.jpg 450w, 
                     ./imeges/w-team/team-4_540.jpg 540w, 
                     ./imeges/w-team/team-4_708.jpg 708w, 
-                    ./imeges/w-team/team-4_900.jpg 900w,"
+                    ./imeges/w-team/team-4_900.jpg 900w"
                 sizes="(min-width: 1200px) 270px, 
                   (min-width: 768px) 354px, 
                   (max-width: 767px) 450px, 100vw"
