--- a/portfolio.html
+++ b/portfolio.html
@@ -123,13 +123,13 @@
             <li class="flex-item">
               <a href="" class="portfolio-link">
                 <div class="product">
-                  <img 
+                  <img class="portfolio-img"
                     srcset="./imeges/w-portfolio/port-1_370.jpg 370w, 
                       ./imeges/w-portfolio/port-1_354.jpg 354w, 
                       ./imeges/w-portfolio/port-1_450.jpg 450w, 
                       ./imeges/w-portfolio/port-1_740.jpg 740w, 
                       ./imeges/w-portfolio/port-1_708.jpg 708w, 
-                      ./imeges/w-portfolio/port-1_900.jpg 900w,"
+                      ./imeges/w-portfolio/port-1_900.jpg 900w"
                     sizes="(min-width: 1200px) 370px, 
                       (min-width: 768px) 354px, 
                       (max-width: 767px) 450px, 100vw"
@@ -155,13 +155,13 @@
             <li class="flex-item">
               <a href="" class="portfolio-link">
                 <div class="product">
-                  <img 
+                  <img class="portfolio-img"
                     srcset="./imeges/w-portfolio/port-2_370.jpg 370w, 
                       ./imeges/w-portfolio/port-2_354.jpg 354w, 
                       ./imeges/w-portfolio/port-2_450.jpg 450w, 
                       ./imeges/w-portfolio/port-2_740.jpg 740w, 
                       ./imeges/w-portfolio/port-2_708.jpg 708w, 
-                      ./imeges/w-portfolio/port-2_900.jpg 900w,"
+                      ./imeges/w-portfolio/port-2_900.jpg 900w"
                     sizes="(min-width: 1200px) 370px, 
                       (min-width: 768px) 354px, 
                       (max-width: 767px) 450px, 100vw"
@@ -187,13 +187,13 @@
             <li class="flex-item">
               <a href="" class="portfolio-link">
                 <div class="product">
-                  <img 
+                  <img class="portfolio-img"
                     srcset="./imeges/w-portfolio/port-3_370.jpg 370w, 
                       ./imeges/w-portfolio/port-3_354.jpg 354w, 
                       ./imeges/w-portfolio/port-3_450.jpg 450w, 
                       ./imeges/w-portfolio/port-3_740.jpg 740w, 
                       ./imeges/w-portfolio/port-3_708.jpg 708w, 
-                      ./imeges/w-portfolio/port-3_900.jpg 900w,"
+                      ./imeges/w-portfolio/port-3_900.jpg 900w"
                     sizes="(min-width: 1200px) 370px, 
                       (min-width: 768px) 354px, 
                       (max-width: 767px) 450px, 100vw"
@@ -219,13 +219,13 @@
             <li class="flex-item">
               <a href="" class="portfolio-link">
                 <div class="product">
-                  <img 
+                  <img class="portfolio-img"
                     srcset="./imeges/w-portfolio/port-4_370.jpg 370w, 
                       ./imeges/w-portfolio/port-4_354.jpg 354w, 
                       ./imeges/w-portfolio/port-4_450.jpg 450w, 
                       ./imeges/w-portfolio/port-4_740.jpg 740w, 
                       ./imeges/w-portfolio/port-4_708.jpg 708w, 
-                      ./imeges/w-portfolio/port-4_900.jpg 900w,"
+                      ./imeges/w-portfolio/port-4_900.jpg 900w"
                     sizes="(min-width: 1200px) 370px, 
                       (min-width: 768px) 354px, 
                       (max-width: 767px) 450px, 100vw"
@@ -251,13 +251,13 @@
             <li class="flex-item">
               <a href="" class="portfolio-link">
                 <div class="product">
-                  <img 
+                  <img class="portfolio-img"
                     srcset="./imeges/w-portfolio/port-5_370.jpg 370w, 
                       ./imeges/w-portfolio/port-5_354.jpg 354w, 
                       ./imeges/w-portfolio/port-5_450.jpg 450w, 
                       ./imeges/w-portfolio/port-5_740.jpg 740w, 
                       ./imeges/w-portfolio/port-5_708.jpg 708w, 
-                      ./imeges/w-portfolio/port-5_900.jpg 900w,"
+                      ./imeges/w-portfolio/port-5_900.jpg 900w"
                     sizes="(min-width: 1200px) 370px, 
                       (min-width: 768px) 354px, 
                       (max-width: 767px) 450px, 100vw"
@@ -283,13 +283,13 @@
             <li class="flex-item">
               <a href="" class="portfolio-link">
                 <div class="product">
-                  <img 
+                  <img class="portfolio-img"
                     srcset="./imeges/w-portfolio/port-6_370.jpg 370w, 
                       ./imeges/w-portfolio/port-6_354.jpg 354w, 
                       ./imeges/w-portfolio/port-6_450.jpg 450w, 
                       ./imeges/w-portfolio/port-6_740.jpg 740w, 
                       ./imeges/w-portfolio/port-6_708.jpg 708w, 
-                      ./imeges/w-portfolio/port-6_900.jpg 900w,"
+                      ./imeges/w-portfolio/port-6_900.jpg 900w"
                     sizes="(min-width: 1200px) 370px, 
                       (min-width: 768px) 354px, 
                       (max-width: 767px) 450px, 100vw"
@@ -315,13 +315,13 @@
             <li class="flex-item">
               <a href="" class="portfolio-link">
                 <div class="product">
-                  <img 
+                  <img class="portfolio-img"
                     srcset="./imeges/w-portfolio/port-7_370.jpg 370w, 
                       ./imeges/w-portfolio/port-7_354.jpg 354w, 
                       ./imeges/w-portfolio/port-7_450.jpg 450w, 
                       ./imeges/w-portfolio/port-7_740.jpg 740w, 
                       ./imeges/w-portfolio/port-7_708.jpg 708w, 
-                      ./imeges/w-portfolio/port-7_900.jpg 900w,"
+                      ./imeges/w-portfolio/port-7_900.jpg 900w"
                     sizes="(min-width: 1200px) 370px, 
                       (min-width: 768px) 354px, 
                       (max-width: 767px) 450px, 100vw"
@@ -347,13 +347,13 @@
             <li class="flex-item">
               <a href="" class="portfolio-link">
                 <div class="product">
-                  <img 
+                  <img class="portfolio-img"
                     srcset="./imeges/w-portfolio/port-8_370.jpg 370w, 
                       ./imeges/w-portfolio/port-8_354.jpg 354w, 
                       ./imeges/w-portfolio/port-8_450.jpg 450w, 
                       ./imeges/w-portfolio/port-8_740.jpg 740w, 
                       ./imeges/w-portfolio/port-8_708.jpg 708w, 
-                      ./imeges/w-portfolio/port-8_900.jpg 900w,"
+                      ./imeges/w-portfolio/port-8_900.jpg 900w"
                     sizes="(min-width: 1200px) 370px, 
                       (min-width: 768px) 354px, 
                       (max-width: 767px) 450px, 100vw"
@@ -379,13 +379,13 @@
             <li class="flex-item">
               <a href="" class="portfolio-link">
                 <div class="product">
-                  <img 
+                  <img class="portfolio-img"
                     srcset="./imeges/w-portfolio/port-9_370.jpg 370w, 
                       ./imeges/w-portfolio/port-9_354.jpg 354w, 
                       ./imeges/w-portfolio/port-9_450.jpg 450w, 
                       ./imeges/w-portfolio/port-9_740.jpg 740w, 
                       ./imeges/w-portfolio/port-9_708.jpg 708w, 
-                      ./imeges/w-portfolio/port-9_900.jpg 900w,"
+                      ./imeges/w-portfolio/port-9_900.jpg 900w"
                     sizes="(min-width: 1200px) 370px, 
                       (min-width: 768px) 354px, 
                       (max-width: 767px) 450px, 100vw"
