виправляю зауваження метора

--- a/index.html
+++ b/index.html
@@ -156,8 +156,10 @@
                       <use href="./imeges/icon/sprite.svg#icon-checkbox-point"></use>
                     </svg>
                   </span>
-                  <span>Соглашаюсь с рассылкой и принимаю</span>
-                  <a href="" class="treaty">Условия договора</a>
+                  <span class="policy-list_text">
+                    Соглашаюсь с рассылкой и принимаю
+                    <a href="" class="treaty">Условия договора</a>
+                  </span>
                 </label>
                 
                 
