--- a/portfolio.html
+++ b/portfolio.html
@@ -145,7 +145,7 @@
                   </div>
                 </div>
 
-                <div class="text-box">
+                <div class="text-box first-project">
                   <h2 class="title project-name">Технокряк</h2>
                   <p class="name-item">Веб-сайт</p>
                 </div>
